test/parse-error-test/annotation_semantics/parse-error.expected
[error] test/parse-error-test/annotation_semantics/input.ddlog[2.22] error: unknown: unrecognized semantics

@semantics("unknown")

                     ^
